updates index.html -fixes stylistic looks; updates app.js - functionality of load more btn works!

--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,8 @@ h3{
 .heading{
     display: flex;
     justify-content: flex-start;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+}
+.row{
+    flex-wrap: nowrap;
 }
