--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ button,div,form,input {
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
 }
 .gifDiv{
     border-radius: 25px;
