--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h1{
 }
 h3{
     font-family: 'Londrina Solid', cursive;
+    text-align: center;
 }
 .userInput{
     display: flex;
@@ -57,7 +58,7 @@ h3{
 }
 .heading{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-flow: row wrap;
 }
 .row{
