--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,21 @@ body{
 .container{
     background-color: rgba(255, 255, 255, .5);
 }
-button,div,form,input {
+button,form,input {
     margin: 10px;
 }
 .eachGIF{
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .gifDiv{
     border-radius: 25px;
     border: black solid 2px;
     background:#EFF0F0;
     padding: 20px;
+    margin: 10px;
 
     display: flex;
     flex-flow: column wrap-reverse;
@@ -61,9 +62,10 @@ h3{
     justify-content: center;
     flex-flow: row wrap;
 }
-.row{
+/* .row{
+    display: flex;
     flex-wrap: nowrap;
-}
+} */
 .title{
     font-size: 15px;
     text-transform: capitalize;
